[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bob/__init__.py"

[project]
name = "bob"
dynamic = ["version"]
dependencies = [
  "discord.py",
  "python-Levenshtein",
  "flask",
  "flask-cors",
  "nest-asyncio",
  "requests",
  "jishaku",
  "pynacl",
  "topggpy",
]

[project.scripts]
bob = "bob.__main__:main"
